# rust-learning

./: .gitignore
aws-cost/: Cargo.toml  README.md
aws-cost/adaptor/: Cargo.toml
aws-cost/adaptor/src/: lib.rs  notification_module.rs
aws-cost/cmd/: Cargo.toml
aws-cost/cmd/src/: main.rs  usecase.rs
aws-cost/infra/: Cargo.toml
aws-cost/infra/src/: lib.rs
aws-cost/infra/src/aws/: cost_explorer.rs  mod.rs
aws-cost/infra/src/slack/: mod.rs
