[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
anyhow = "1.0.60"
async-trait = "0.1.57"
chrono = "0.4.20"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
aws-config = "0.47.0"
aws-sdk-costexplorer = "0.17.0"